Revert "[Frontend] Fixed table horizontal scrolling issue (#509)"
This reverts commit fef63e6babce926f8da42527cd7794dbc4d474b6.

--- a/frontend/src/components/filter-table/filter-table.css
+++ b/frontend/src/components/filter-table/filter-table.css
@@ -50,7 +50,7 @@
 }
 
 .table {
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .table-header {
@@ -83,7 +83,6 @@
     border-bottom: 1px solid rgba(167, 182, 194, 0.4);
     box-shadow: 0px 3px 8px -3px rgba(167, 182, 194, 0.5);
     user-select: none;
-    width: fit-content;
 }
 .th {
     display: flex !important;
@@ -110,7 +109,6 @@
     padding-left: 0.7em;
     white-space: nowrap;
     overflow: hidden;
-    text-align: center;
 }
 .delete-col,
 .details-col,
